--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -153,6 +153,10 @@ p{
   width: 17.6%;
   margin-right: 3%;
 }
+.col-2-3{
+  width: 62.66%;
+  margin-right: 3%;
+}
 /* Start Header */
 .logo-nav-wrapper {
   width: 80%;
@@ -225,6 +229,14 @@ p{
 .mr-20 {
   margin-right: 20px;
 }
+.mtb-20-40 {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+.mtb-20-50 {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
 .mb-30 {
   margin-bottom: 30px;
 }
@@ -264,7 +276,16 @@ p{
   color: #431c53;
   border: 3px solid #431c53;
 }
-
+.sign-up-btn{
+  position: absolute;
+  right: 20px;
+  bottom: -50px;
+  margin-top: 20px;
+  margin-bottom: 50px;
+  /* display: inline-block; */
+  color: #fff;
+  text-transform: uppercase;
+}
 /* Header */
 .site-header{
   box-shadow: 0 0 2px #707070;
@@ -387,7 +408,7 @@ p{
   color: #1c1c1c;
   font-size: 36px;
   line-height: 73px;
-  font-family: BalooBhaina2SemiBold; 
+  font-family: BalooBhaina2SemiBold;
 }
 .stats-text{
   color: #7C7C7C;
@@ -413,30 +434,6 @@ p{
   font-family: MontserratRegular;
 }
 /* collections */
-/* .collection{
-  position: relative;
-}
-.collection-content{
-  position: absolute;
-  top: 0;
-}
-.height{
-  height: 600px;
-}
-.collection img{
-  width: 100%;
-  height: 600px;
-  object-fit: cover;
-}
-.gallery{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-}
-.gallery-image-container{
-  height: 48%;
-} */
 .collection{
   width: 100%;
   height: 300px;
@@ -546,4 +543,86 @@ p{
   background-color: #431c53;
   filter: invert(15%) sepia(47%) saturate(1244%) hue-rotate(246deg) brightness(93%) contrast(101%);
   /* filter: invert(100%) sepia(0%) saturate(3647%) hue-rotate(105deg) brightness(90%) contrast(92%); */
+}
+.account-form{
+  width: 100%;
+  height: 600px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top center;
+  margin-top: 100px;
+  padding-top: 350px;
+  /* padding-bottom: 100px; */
+}
+.account-description{
+  font-size: 20px;
+  line-height: 32px;
+  color: #1c1c1c;
+  font-family: MontserratExtraLight;
+}
+.account-title{
+  font-size: 72px;
+  line-height: 82px;
+  color: #1c1c1c;
+  font-family: BalooBhaina2Bold;
+}
+.account-title strong{
+  color: #431c53;
+}
+.account-text{
+  color: #1c1c1c;
+  font-size: 18px;
+  font-family: MontserratRegular;
+}
+.form{
+  text-align: center;
+  padding: 50px 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px #DDDDDD;
+  position: relative;
+}
+.form .form-input{
+  width: 100%;
+  border: none;
+  padding: 10px;
+  margin-bottom: 8px;
+  border-radius: 100px;
+  text-indent: 5px;
+  background-color: #F6F8FA;
+}
+.form .form-input::placeholder{
+  color: #7C7C7C;
+  font-size: 14px;
+  font-family: MontserratRegular;
+}
+.form .form-input:focus{
+  outline: none;
+}
+.form .form-title{
+  color: #1c1c1c;
+  font-size: 28px;
+  line-height: 38px;
+  font-family: BalooBhaina2Bold;
+}
+.form .form-description{
+  color: #1c1c1c;
+  font-size: 18px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-family: MontserratRegular; 
+}
+.form .form-checkbox{
+  position: absolute;
+  left: 20px;
+  bottom: 30px;
+  border-color: #7C7C7C;
+  border-radius: 0;
+}
+.form .form-checkbox-title{
+  position: absolute;
+  left: 50px; 
+  bottom: 30px;
+  font-size: 12px;
+  color: #7C7C7C;
+  font-family: MontserratRegular; 
 }
